# cppref

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  cpp_coding_guidelines.md  readme.md  vendor_gtest.sh  verify_gtest.sh
01_main/controllers/demo_repl/: CMakeLists.txt  clean.sh  test.sh
01_main/controllers/demo_repl/inc/: demo_controller.h
01_main/controllers/demo_repl/integration/: CMakeLists.txt  req_response_interface.h
01_main/controllers/demo_repl/src/: demo_controller.cc
01_main/controllers/demo_repl/test/: demo_controller_test.cc
01_main/controllers/quantalox/: CMakeLists.txt  coverage.sh
01_main/controllers/quantalox/inc/: qx_controller.h
01_main/controllers/quantalox/src/: qx_controller.cc
01_main/controllers/quantalox/test/: account_test.cc
01_main/entry/: main.cc
01_main/presenters/cli/: CMakeLists.txt  coverage.sh  readme.md
01_main/presenters/cli/inc/: calculator.h  cli_shell.h  req_response_interface.h
01_main/presenters/cli/integration/: CMakeLists.txt
01_main/presenters/cli/src/: cli_shell.cc  main.cc  string_utils.cc
01_main/presenters/cli/test/: cli_shell_test.cc  string_utils_test.cc
01_main/presenters/demo_gtest/: CMakeLists.txt
02_use_cases/: readme.md
02_use_cases/04_asset_portfolio/: CMakeLists.txt  coverage.sh
02_use_cases/04_asset_portfolio/common/: i_account_repository.h
02_use_cases/04_asset_portfolio/create_account/inc/: create_account.h
02_use_cases/04_asset_portfolio/create_account/src/: create_account.cc
02_use_cases/04_asset_portfolio/test/: create_account_test.cc
04_gateways/database/inc/: database_connector.h  sqlite3_database_connector.h
04_gateways/database/src/: sqlite3_database_connector.cc
04_gateways/database/test/: sqlite3_database_test.cc
04_gateways/internet/: CMakeLists.txt  coverage.sh  fix_ownership.sh  test.sh
04_gateways/internet/inc/: httplib_network_connector.h  network_connector.h
04_gateways/internet/src/: httplib_network_connector.cc
04_gateways/repositories/lstc/: CMakeLists.txt  coverage.sh  test.sh
04_gateways/repositories/lstc/inc/: i_network_data.h  network_data_repository.h
04_gateways/repositories/lstc/src/: network_data_repository.cc
04_gateways/repositories/sqlite3/: CMakeLists.txt  coverage.sh  test.sh
04_gateways/repositories/sqlite3/inc/: account_repository.h  keyvalue_repository.h  timeseries_repository.h
04_gateways/repositories/sqlite3/integration/: entities.h  sqlite3_database_connector.cc  sqlite3_database_connector.h
04_gateways/repositories/sqlite3/src/: account_repository.cc  keyvalue_repository.cc  timeseries_repository.cc
04_gateways/repositories/sqlite3/test/: account_repository_test.cc  keyvalue_repository_test.cc  timeseries_repository_test.cc
04_gateways/repositories/user/inc/: user_repository.h
04_gateways/repositories/user/src/: user_repository.cc
04_gateways/repositories/wget/: CMakeLists.txt  coverage.sh  test.sh
98_lab/01_gtest_demo/: README.md  build.sh  coverage.sh
98_lab/01_gtest_demo/project/include/: string_utils.h
98_lab/01_gtest_demo/project/tests/: calculator_test.cc
98_lab/02_dd_demo/: README.md  build.sh  docs.sh  doxygen.sh  serve.sh  shell.sh
98_lab/02_dd_demo/project/: .clang-uml  CMakeLists.txt  Doxyfile
98_lab/03_embedded_demo/: Dockerfile  Dockerfile.vendored  build.sh  coverage.sh  docs.sh  fix_ownership.sh  readme.md  shell.sh  test.sh  uml.sh  vendor.sh  verify-vendor.sh
98_lab/03_embedded_demo/project/: .clang-uml  CMakeLists.txt  Doxyfile  README.md  project.yml
98_lab/03_embedded_demo/project/include/: circular_buffer.h  gpio_driver.h
98_lab/03_embedded_demo/project/src/: circular_buffer.c  gpio_driver.c  main.c
98_lab/03_embedded_demo/project/test/: test_circular_buffer.c  test_gpio_driver.c
98_lab/04_gtest_vendored/: Dockerfile.vendored  README.md  build.sh  clean.sh  fix_ownership.sh  shell.sh  test.sh  verify-vendor.sh
98_lab/04_gtest_vendored/project/: CMakeLists.txt
98_lab/04_gtest_vendored/project/src/: calculator.cc
98_lab/05_dd_vendored/: CHANGES.md  Dockerfile  Dockerfile.vendored  README.md  build-vendored.sh  build.sh  clean.sh  docs.sh  doxygen.sh  generate-docs.sh  uml.sh  vendor.sh  verify-vendor.sh
98_lab/05_dd_vendored/project/: .clang-uml  CMakeLists.txt  README.md
98_lab/05_dd_vendored/project/include/: Calculator.h  StringUtils.h
98_lab/05_dd_vendored/project/src/: Calculator.cpp  StringUtils.cpp  main.cpp
98_lab/06_discovery/: cc.md  readme.md
99_project_utils/: docker-install-gnu  docker-install-mac  docker-install-win.ps1  setup-vscode.sh  vendor-db.sh  vendor-deps.sh
99_project_utils/gtest/: Dockerfile  build-vendored.sh  vendor.sh
